--- a/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMVOLnu9IEQ0TPzVp2svHGF",
+      "authorship_tag": "ABX9TyN0kqVWgzWf6BeCcJsEcaVA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,10 +80,25 @@
         "from plots.chapter1 import *"
       ],
       "metadata": {
-        "id": "pgGfHWV5oZqU"
+        "id": "pgGfHWV5oZqU",
+        "outputId": "25142408-937a-474c-f21a-4ceed61edb1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Installing torchviz...\n",
+            "Downloading files from GitHub repo to Colab...\n",
+            "Creating folders...\n",
+            "Finished!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -184,7 +199,7 @@
           "height": 505
         },
         "id": "ZBTcz6BhqYoR",
-        "outputId": "db69d5bc-3565-4c7f-c55e-075b4e99ffd2"
+        "outputId": "73149a53-53af-42ad-912f-4941cba60690"
       },
       "execution_count": 5,
       "outputs": [
@@ -193,8 +208,8 @@
           "data": {
             "text/plain": [
               "(<Figure size 864x432 with 2 Axes>,\n",
-              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f554148a9d0>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f54c2e36a50>],\n",
+              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7ff21dd8d410>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff21dcf1050>],\n",
               "       dtype=object))"
             ]
           },
@@ -272,7 +287,7 @@
       ],
       "metadata": {
         "id": "br2g0-4HSk4d",
-        "outputId": "1b100cb5-58dd-4ed5-875b-ba652c44d43e",
+        "outputId": "95283442-d762-40aa-c9df-2405385f0bd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -356,7 +371,7 @@
       ],
       "metadata": {
         "id": "1n2CtsUXS9gj",
-        "outputId": "7393001b-16e0-4004-c5bb-0be28177a96e",
+        "outputId": "59293a18-a25e-4cdd-c2f4-45541fbbc41f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -408,7 +423,7 @@
       ],
       "metadata": {
         "id": "Vl3-r09yURpb",
-        "outputId": "75310719-0bc0-4b80-a7a0-572336b3e287",
+        "outputId": "a4581ee1-59ad-42d6-c837-887b0b43b453",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -462,7 +477,7 @@
       ],
       "metadata": {
         "id": "pkbTlKSbUrD4",
-        "outputId": "31a99179-2ac1-4f22-a9c3-19b5755112f7",
+        "outputId": "94d6a1f1-e6a2-410a-bb4b-ffc3894ff0eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -567,12 +582,12 @@
       ],
       "metadata": {
         "id": "uzXq0fwnDFgE",
-        "outputId": "1fff9301-6539-4516-f6b5-4a70ed7d0793",
+        "outputId": "f658d331-5e50-4d93-91e1-29a869d56239",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,12 +619,12 @@
       ],
       "metadata": {
         "id": "WqxxP3wSFz-D",
-        "outputId": "cacad45d-35d9-471e-e63e-0eb1a894cb43",
+        "outputId": "e03505ae-f7b7-4bb4-8e3e-2dcb9543f283",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,13 +652,13 @@
       ],
       "metadata": {
         "id": "5IwTRGzuGUbG",
-        "outputId": "1ba99d1d-df70-4fa0-e8d3-89c25f14b9f0",
+        "outputId": "105e1c49-e76c-4bb9-cfb9-832d1fc74fbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
         }
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -668,10 +683,254 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "In Numpy, you may have an array that has three dimensions, right? That is,\n",
+        "technically speaking, a tensor.\n",
+        "\n",
+        "You can create tensors in PyTorch pretty much the same way you create arrays in\n",
+        "Numpy. \n",
+        "\n",
+        "Using `tensor()` you can create either a scalar or a tensor."
+      ],
       "metadata": {
         "id": "vzhYQ-Q3GsRF"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scalar = torch.tensor(3.14159)\n",
+        "vector = torch.tensor([1, 2, 3])\n",
+        "matrix = torch.ones((2, 3), dtype=torch.float)\n",
+        "tensor = torch.randn((2, 3, 4), dtype=torch.float)\n",
+        "\n",
+        "print(scalar)\n",
+        "print(vector)\n",
+        "print(matrix)\n",
+        "print(tensor)"
+      ],
+      "metadata": {
+        "id": "8QA2sK9tiodM",
+        "outputId": "2c0c5dd7-4f39-4df6-ac5d-fa58e85c5114",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(3.1416)\n",
+            "tensor([1, 2, 3])\n",
+            "tensor([[1., 1., 1.],\n",
+            "        [1., 1., 1.]])\n",
+            "tensor([[[ 0.4059,  0.3094,  0.1682, -0.3539],\n",
+            "         [ 0.0851, -1.3155, -0.3744,  0.5926],\n",
+            "         [-0.2747,  0.5639, -0.8225,  0.7778]],\n",
+            "\n",
+            "        [[ 0.6274,  0.1645, -0.3351, -1.2248],\n",
+            "         [ 0.4984,  0.8583,  0.7953, -0.0199],\n",
+            "         [ 0.8512, -0.2602,  0.7607, -0.1324]]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You can get the shape of a tensor using its `size()` method or its shape attribute."
+      ],
+      "metadata": {
+        "id": "pibBdsgLjcSQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tensor.size(), tensor.shape)"
+      ],
+      "metadata": {
+        "id": "v13QAvfnjd8p",
+        "outputId": "88c9b7a1-3a0d-4a21-fa64-aa1109ccac02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([2, 3, 4]) torch.Size([2, 3, 4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# scalars have \"empty\" shapes\n",
+        "print(scalar.size(), scalar.shape)"
+      ],
+      "metadata": {
+        "id": "SEUjmq7sjm1e",
+        "outputId": "c1f33467-b4a6-4a41-803a-affdaa6ff456",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([]) torch.Size([])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You can also reshape a tensor using its `view()` (preferred) or `reshape()` methods."
+      ],
+      "metadata": {
+        "id": "sn6ZczR2jwwg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We get a tensor with a different shape but it still is the SAME tensor\n",
+        "same_matrix = matrix.view(1, 6)\n",
+        "\n",
+        "# If we change one of its elements...\n",
+        "same_matrix[0, 1] = 2.\n",
+        "\n",
+        "# It changes both variables: matrix and same_matrix\n",
+        "print(matrix)\n",
+        "print(same_matrix)"
+      ],
+      "metadata": {
+        "id": "GUGgd1V_jziz",
+        "outputId": "960152b7-995b-4543-d648-0ef4fbed47d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 2., 1.],\n",
+            "        [1., 1., 1.]])\n",
+            "tensor([[1., 2., 1., 1., 1., 1.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If you want to copy all data for real, that is, duplicate the data in memory, you may\n",
+        "use either its `new_tensor()` or `clone()` methods."
+      ],
+      "metadata": {
+        "id": "VZ3f0wxRkQ9X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We can use \"new_tensor\" method to REALLY copy it into a new one\n",
+        "different_matrix = matrix.new_tensor(matrix.view(1, 6))\n",
+        "\n",
+        "# Now, if we change one of its elements...\n",
+        "different_matrix[0, 1] = 3.\n",
+        "\n",
+        "# The original tensor (matrix) is left untouched!\n",
+        "# But we get a \"warning\" from PyTorch telling us to use \"clone()\" instead!\n",
+        "print(matrix)\n",
+        "print(different_matrix)"
+      ],
+      "metadata": {
+        "id": "hIwAxu6jkTsO",
+        "outputId": "cf620cec-d91c-49e7-c417-6d3ce00c398b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 2., 1.],\n",
+            "        [1., 1., 1.]])\n",
+            "tensor([[1., 3., 1., 1., 1., 1.]])\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than tensor.new_tensor(sourceTensor).\n",
+            "  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It seems that PyTorch prefers that we use `clone()` - together with `detach()` -\n",
+        "instead of `new_tensor()`… Both ways accomplish exactly the same result.\n",
+        "\n",
+        "> `detach()` removes the tensor from the computation graph."
+      ],
+      "metadata": {
+        "id": "3OiXlzOjlpad"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lets follow PyTorch's suggestion and use \"clone\" method\n",
+        "another_matrix = matrix.view(1, 6).clone().detach()\n",
+        "\n",
+        "# Again, if we change one of its elements...\n",
+        "another_matrix[0, 1] = 4.\n",
+        "\n",
+        "# The original tensor (matrix) is left untouched!\n",
+        "print(matrix)\n",
+        "print(another_matrix)"
+      ],
+      "metadata": {
+        "id": "J127k_PVlqHN",
+        "outputId": "df57e15e-1a54-4a95-9170-a0845adb9bd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1., 2., 1.],\n",
+            "        [1., 1., 1.]])\n",
+            "tensor([[1., 4., 1., 1., 1., 1.]])\n"
+          ]
+        }
+      ]
     }
   ]
 }
