--- a/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/02_simple_regression_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhjAo+fiQgIHYS+TpapWje",
+      "authorship_tag": "ABX9TyM7H4KiGzDkbQs72VdDtGEH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "a4e8b341-553a-4d4a-8ad6-00faf3d04407",
+        "outputId": "17af8f74-b336-4568-831a-26bcdbc7ef8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -197,10 +197,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 505
+          "height": 502
         },
         "id": "ZBTcz6BhqYoR",
-        "outputId": "57a1b289-cd97-4560-979b-d916669c1afd"
+        "outputId": "a75c533d-cd04-4397-f623-1c7f0ad563b4"
       },
       "execution_count": 5,
       "outputs": [
@@ -209,8 +209,8 @@
           "data": {
             "text/plain": [
               "(<Figure size 864x432 with 2 Axes>,\n",
-              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7ff512042d10>,\n",
-              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7ff511eff590>],\n",
+              " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f5f6f5b1a50>,\n",
+              "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f5f01c90750>],\n",
               "       dtype=object))"
             ]
           },
@@ -288,7 +288,7 @@
       ],
       "metadata": {
         "id": "br2g0-4HSk4d",
-        "outputId": "74c11826-0170-415a-e6be-5a2c3e8db05e",
+        "outputId": "9539da26-3409-4203-a998-9bd84b345298",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -372,7 +372,7 @@
       ],
       "metadata": {
         "id": "1n2CtsUXS9gj",
-        "outputId": "eb40bf63-c423-492c-d413-5c7b92a2866b",
+        "outputId": "92592db0-f5d5-47ad-8939-e918183e11fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -424,7 +424,7 @@
       ],
       "metadata": {
         "id": "Vl3-r09yURpb",
-        "outputId": "1900f8a0-6469-48a5-edef-1f255ef52d51",
+        "outputId": "b108c8be-d4b2-4687-82de-2bea8d9a7c77",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -478,7 +478,7 @@
       ],
       "metadata": {
         "id": "pkbTlKSbUrD4",
-        "outputId": "80c5ad05-5919-4375-cf6a-d3add2c1624d",
+        "outputId": "dc17ae02-34af-4003-f229-8a33a3d1ae41",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -583,7 +583,7 @@
       ],
       "metadata": {
         "id": "uzXq0fwnDFgE",
-        "outputId": "7c76ffa0-4f98-4519-ed6b-4fa2ac2cb223",
+        "outputId": "8874f916-bb20-47a4-fa30-b16a137485a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -620,7 +620,7 @@
       ],
       "metadata": {
         "id": "WqxxP3wSFz-D",
-        "outputId": "2e9594b6-c79d-4f2b-e9d8-d7fb8916fb49",
+        "outputId": "4f5fc879-441e-4cb8-e24b-eeeed13a2c9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -653,7 +653,7 @@
       ],
       "metadata": {
         "id": "5IwTRGzuGUbG",
-        "outputId": "b4588589-182a-4696-ab4a-63e1330c32df",
+        "outputId": "865abbe3-1420-41e6-bee6-659fb1d0533a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 433
@@ -712,7 +712,7 @@
       ],
       "metadata": {
         "id": "8QA2sK9tiodM",
-        "outputId": "89885f67-5aea-4aa9-8b51-8c7a8ab540c9",
+        "outputId": "456ecf8f-def2-4479-80c7-f761f2e5a0c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -727,13 +727,13 @@
             "tensor([1, 2, 3])\n",
             "tensor([[1., 1., 1.],\n",
             "        [1., 1., 1.]])\n",
-            "tensor([[[-0.1858,  1.4809, -0.3318,  2.4869],\n",
-            "         [-0.3350,  0.9300,  1.3675,  0.6287],\n",
-            "         [-0.8731, -0.5722, -0.8430,  0.0955]],\n",
+            "tensor([[[-0.8007, -0.5878, -0.2108,  0.2184],\n",
+            "         [ 0.0775, -0.0531, -0.3204, -0.7619],\n",
+            "         [-0.7329, -0.8550, -0.1801, -1.4654]],\n",
             "\n",
-            "        [[-0.5826, -0.0548,  2.0835,  1.3631],\n",
-            "         [-1.4803,  1.3273,  1.0528,  2.6153],\n",
-            "         [ 1.7172,  0.1564,  2.1998, -0.8120]]])\n"
+            "        [[-2.6376, -0.2023,  0.4227,  1.8063],\n",
+            "         [-1.6945, -1.5589,  1.8485,  0.3544],\n",
+            "         [ 0.2454, -1.7327, -0.8978, -0.0486]]])\n"
           ]
         }
       ]
@@ -754,7 +754,7 @@
       ],
       "metadata": {
         "id": "v13QAvfnjd8p",
-        "outputId": "f24307be-b3b0-4d45-8ad8-d5d8e68ddcdb",
+        "outputId": "2a79d2ad-02a9-4717-a83c-748430071be7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -778,7 +778,7 @@
       ],
       "metadata": {
         "id": "SEUjmq7sjm1e",
-        "outputId": "37218cde-c38a-4388-ce2e-e68220259b0a",
+        "outputId": "18d2d208-c129-4e63-e11d-1f1142112a7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -818,7 +818,7 @@
       ],
       "metadata": {
         "id": "GUGgd1V_jziz",
-        "outputId": "c29ff8ac-4643-4c37-df74-76761eaf55b6",
+        "outputId": "4ed02cd4-1f24-4d9c-f0a1-9460516c2860",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -862,7 +862,7 @@
       ],
       "metadata": {
         "id": "hIwAxu6jkTsO",
-        "outputId": "f6624813-84d8-4439-be31-dd5384030bd1",
+        "outputId": "7f0f6ad8-4422-4149-8b13-4f0325dbee3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -915,7 +915,7 @@
       ],
       "metadata": {
         "id": "J127k_PVlqHN",
-        "outputId": "d9acc86b-132a-44d9-d81b-e0e7791e7e66",
+        "outputId": "7acd5f7f-c7aa-4e3c-f565-b2a26067028e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -960,7 +960,7 @@
       ],
       "metadata": {
         "id": "i2ZOA43XtLKF",
-        "outputId": "e4179c6f-972c-40d1-9c6a-9ca1d09fd007",
+        "outputId": "14af90f2-aea0-4e46-a90e-2424f6bff536",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -996,7 +996,7 @@
       ],
       "metadata": {
         "id": "bhb3xZwXtoRe",
-        "outputId": "f593a51f-331e-4c99-bf25-830322fa98f1",
+        "outputId": "6bb6e539-1652-4861-96f4-9eebc872cf16",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1042,7 +1042,7 @@
       ],
       "metadata": {
         "id": "s1JGislIuNIg",
-        "outputId": "c6c777a2-6d90-41a6-e3cc-757895ec7391",
+        "outputId": "d97e6d28-93eb-4c59-a83e-23da7133892c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1068,7 +1068,7 @@
       ],
       "metadata": {
         "id": "ZAU0yUFeunmX",
-        "outputId": "9bdb2b20-c953-4f9b-d7df-f0aad012fafe",
+        "outputId": "1e2ae6bb-1a37-4896-b35c-f53791860337",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1095,7 +1095,7 @@
       ],
       "metadata": {
         "id": "DLl4GTfzutxt",
-        "outputId": "2ac9497e-689f-45c1-f555-ca1d17b67d32",
+        "outputId": "3e254521-692c-422a-926e-8b656ef2ef4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1147,7 +1147,7 @@
       ],
       "metadata": {
         "id": "_Utu0cE4yCRk",
-        "outputId": "8badc5f4-0328-41bf-eaf9-866f1073db32",
+        "outputId": "ecca9bf2-18de-4c65-8a78-c1d2a3a94279",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1181,7 +1181,7 @@
       ],
       "metadata": {
         "id": "7eRDuC6byxqP",
-        "outputId": "6afa7866-f743-4615-90f3-9b5c3177ae6e",
+        "outputId": "d1aa3fe7-0054-4787-e9c2-b665a3b8f84a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1215,7 +1215,7 @@
       ],
       "metadata": {
         "id": "_UX1wXYUznz7",
-        "outputId": "4cd264c4-0ca4-4aee-f884-ab016772f40b",
+        "outputId": "bd7c085f-df95-4499-86b4-88abf1a6bd88",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1241,12 +1241,12 @@
       ],
       "metadata": {
         "id": "SHdNn3S_0yFt",
-        "outputId": "b0144d14-a4d3-48b3-a797-4ed92076ef6f",
+        "outputId": "d3f60195-fff3-42db-d26d-e365dfc54c26",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 28
         }
       ]
     },
@@ -1288,7 +1288,7 @@
       "metadata": {
         "id": "vOPC3dRA1c78"
       },
-      "execution_count": 30,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1307,12 +1307,12 @@
       ],
       "metadata": {
         "id": "UErHp9X22tU2",
-        "outputId": "3cec7d60-b7c4-456d-e4cd-1abeaaf6fce3",
+        "outputId": "30a1f643-8887-44c3-a921-56944bfd3d65",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1330,12 +1330,12 @@
       ],
       "metadata": {
         "id": "dMDY9RT43A0W",
-        "outputId": "c22b85af-9a9d-4800-c8c1-9ee47dd6a9f9",
+        "outputId": "c4c2050e-1655-43e2-8d2e-9a45fc68b2a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1365,27 +1365,25 @@
     {
       "cell_type": "code",
       "source": [
-        "back_to_numpy = x_train_tensor.numpy()"
+        "try:\n",
+        "  back_to_numpy = x_train_tensor.numpy()\n",
+        "except TypeError:\n",
+        "  print(\"TypeError: can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.\")"
       ],
       "metadata": {
         "id": "9ciOSjfg3vLw",
-        "outputId": "eb9bffb9-02d6-4e99-8d3e-3a53701b35e7",
+        "outputId": "90ce5bca-a460-47d8-a69a-6c5d557b942c",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 169
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-bbb26eb4f53c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mback_to_numpy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_train_tensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first."
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TypeError: can't convert cuda:0 device type tensor to numpy. Use Tensor.cpu() to copy the tensor to host memory first.\n"
           ]
         }
       ]
@@ -1408,7 +1406,7 @@
       "metadata": {
         "id": "DLGHsBBO4Dbl"
       },
-      "execution_count": 35,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1431,9 +1429,186 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "What distinguishes a tensor used for training data (or validation, or test) — like the\n",
+        "ones we’ve just created — from a tensor used as a (trainable) parameter/weight?\n",
+        "\n",
+        "The latter requires the computation of its gradients, so we can update their values\n",
+        "(the parameters’ values, that is). \n",
+        "\n",
+        "That’s what the `requires_grad=True` argument is\n",
+        "good for. It tells PyTorch to compute gradients for us.\n",
+        "\n",
+        "> A tensor for a learnable parameter requires a gradient!"
+      ],
       "metadata": {
         "id": "gEIymB6T4SJ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# FIRST\n",
+        "# Initializes parameters \"b\" and \"w\" randomly, ALMOST as we\n",
+        "# did in Numpy since we want to apply gradient descent on\n",
+        "# these parameters we need to set REQUIRES_GRAD = TRUE\n",
+        "b = torch.randn(1, requires_grad=True, dtype=torch.float)\n",
+        "w = torch.randn(1, requires_grad=True, dtype=torch.float)\n",
+        "print(b, w)"
+      ],
+      "metadata": {
+        "id": "oDj4_Y6VrjXC",
+        "outputId": "b5b40b94-e40d-42b4-c622-a219f0f8b1b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.3367], requires_grad=True) tensor([0.1288], requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# SECOND\n",
+        "# But what if we want to run it on a GPU? We could just send them to device, right?\n",
+        "b = torch.randn(1, requires_grad=True, dtype=torch.float).to(device)\n",
+        "w = torch.randn(1, requires_grad=True, dtype=torch.float).to(device)\n",
+        "print(b, w)"
+      ],
+      "metadata": {
+        "id": "ZXi9U1tavKJZ",
+        "outputId": "699bc5af-9d9a-4edd-b05b-8eccc165c7b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.3367], device='cuda:0', grad_fn=<ToCopyBackward0>) tensor([0.1288], device='cuda:0', grad_fn=<ToCopyBackward0>)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# THIRD\n",
+        "# We can either create regular tensors and send them to the device (as we did with our data)\n",
+        "b = torch.randn(1, dtype=torch.float).to(device)\n",
+        "w = torch.randn(1, dtype=torch.float).to(device)\n",
+        "# and THEN set them as requiring gradients...\n",
+        "b.requires_grad_()\n",
+        "w.requires_grad_()\n",
+        "print(b, w)"
+      ],
+      "metadata": {
+        "id": "32L6EkM5ved4",
+        "outputId": "0cd0b975-ad69-4fdd-f359-a58224841373",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.3367], device='cuda:0', requires_grad=True) tensor([0.1288], device='cuda:0', requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This approach worked fine; we managed to end up with gradient-requiring GPU\n",
+        "tensors for our parameters `b` and `w`. \n",
+        "\n",
+        "It seems a lot of work, though… Can we do\n",
+        "better still?\n",
+        "\n",
+        "Yes, we can do better: we can assign tensors to a device at the moment of their\n",
+        "creation."
+      ],
+      "metadata": {
+        "id": "RTyq7F8Gv8Mx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(42)\n",
+        "\n",
+        "# FINAL\n",
+        "# We can specify the device at the moment of creation\n",
+        "# RECOMMENDED!\n",
+        "\n",
+        "# Step 0 - Initializes parameters \"b\" and \"w\" randomly\n",
+        "b = torch.randn(1, requires_grad=True, dtype=torch.float, device=device)\n",
+        "w = torch.randn(1, requires_grad=True, dtype=torch.float, device=device)\n",
+        "print(b, w)"
+      ],
+      "metadata": {
+        "id": "HyvDwy8nwARL",
+        "outputId": "cfcdc46f-3fd1-48cf-ef55-3bed93e36a2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.1940], device='cuda:0', requires_grad=True) tensor([0.1391], device='cuda:0', requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now that we know how to create tensors that require gradients, let’s see how\n",
+        "PyTorch handles them."
+      ],
+      "metadata": {
+        "id": "yyo3pJzzwi6V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Autograd"
+      ],
+      "metadata": {
+        "id": "P-1hyTcXwj_w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "wTCSiNLnwtk9"
       }
     }
   ]
